package sits.viewer;

public class TournamentInfo {

    public String id;
    public String name;
    public String status;   // "REGISTERING" or "RUNNING"

    public TournamentInfo() {}

    @Override
    public String toString() {
        return name + " [" + status + "]";
    }
}
